--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Young+Serif&display=swap" rel="stylesheet">
 
 </head>
@@ -65,6 +65,6 @@
             
             <button class="generate-btn">GENERATE <span>→</span></button>
                         
-    <script src="script1.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
